--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ sniffio==1.3.1
 starlette==0.38.4
 typing_extensions==4.12.2
 tzdata==2024.1
+unidic-lite==1.0.8
 uvicorn==0.30.6
 uvloop==0.20.0
 watchfiles==0.24.0
